# c2d-marketplace

./: .editorconfig  .gitignore  .prettierrc  .sops.yaml  IEEEtran.bst  LICENSE  README.md  bibliography.bib  commitlint.config.js  cors.sh  docker-compose.yml  encrypted.env  main.tex  package.json  solidity-highlighting.tex
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
benchmarks/: benchmark.sh  benchmarks.ipynb  delete.sh  gas.sh  hardhat.config.ts  monitor.sh  package.json
benchmarks/contracts/: proof.json  verifier.sol
benchmarks/max/iterative/: max.txt
benchmarks/max/merkle/: max.txt
benchmarks/mean/iterative/: mean.txt
benchmarks/mean/mean_32/: abi.json  main.zok
benchmarks/mean/merkle/: mean.txt
benchmarks/median/iterative/: median.txt
benchmarks/median/median_32/: abi.json  main.zok
benchmarks/median/merkle/: median.txt
benchmarks/min/iterative/: min.txt
benchmarks/min/merkle/: min.txt
benchmarks/scripts/: deploy.ts
benchmarks/standard_deviation/iterative/: standard_deviation.txt
benchmarks/sum/: gascost.sh  sum.txt  sum_hardhat.txt
benchmarks/test/: verifier.test.ts
content/: 01_introduction.tex  02_background.tex  03_related_work.tex  04_requirements.tex  05_concept_and_design.tex  07_evaluation.tex  08_conclusion.tex
content/00_frontpages/: 00_frontpage.tex
content/glossary/: index.tex
src/api-gateway/: Dockerfile
src/compute-node/: Dockerfile  docker-compose.yml  package.json  tsconfig.json  worker.ts
src/contracts/: .eslintignore  hardhat.config.ts  package.json  tsconfig.json
src/crypto-service/: .fastapi-mvc.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/crypto-service/crypto_service/: __init__.py  __main__.py  version.py  wsgi.py
src/crypto-service/crypto_service/app/: __init__.py  asgi.py  router.py
src/crypto-service/crypto_service/app/controllers/: encoding.py  ready.py
src/crypto-service/crypto_service/app/exceptions/: __init__.py
src/crypto-service/crypto_service/app/utils/: __init__.py  bytes.py  encoding.py  merkle.py  xor.py
src/crypto-service/crypto_service/app/views/: __init__.py  encoding.py
src/crypto-service/crypto_service/cli/: __init__.py  cli.py  serve.py
src/crypto-service/crypto_service/config/: __init__.py  application.py  gunicorn.py
src/crypto-service/docs/: api.rst  conf.py  index.rst  install.rst  usage.rst
src/crypto-service/tests/integration/: conftest.py
src/crypto-service/tests/unit/: conftest.py  test_wsgi.py
src/crypto-service/tests/unit/app/: test_asgi.py
src/crypto-service/tests/unit/app/controllers/: test_ready.py
src/crypto-service/tests/unit/app/exceptions/: test_http.py
src/crypto-service/tests/unit/app/utils/: test_aiohttp_client.py
src/crypto-service/tests/unit/app/views/: test_error.py  test_ready.py
src/crypto-service/tests/unit/cli/: test_cli.py  test_serve.py  test_utils.py
src/marketplace/: .eslintignore  .graphclientrc.yml  README.md  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/preprocessor/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
src/preprocessor/preprocessor/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
src/preprocessor/preprocessor/services/: __init__.py
src/preprocessor/preprocessor/services/redis/: lifetime.py
src/preprocessor/preprocessor/tests/: __init__.py
src/preprocessor/preprocessor/web/: __init__.py  application.py  lifetime.py
src/preprocessor/preprocessor/web/api/: __init__.py  router.py
src/preprocessor/preprocessor/web/api/docs/: __init__.py
src/preprocessor/preprocessor/web/api/echo/: __init__.py  views.py
src/preprocessor/preprocessor/web/api/monitoring/: __init__.py
src/preprocessor/preprocessor/web/api/redis/: __init__.py  views.py
src/sensor/: pyproject.toml
src/sensor/sensor/: __init__.py
src/sensor/sensor/preprocessing/: __init__.py  cli.py  zokrates.py
src/sensor/tests/: __init__.py
src/subgraph/: .eslintignore  .eslintrc.json  docker-compose.yml  package.json  schema.graphql  subgraph.yaml
style/: style.tex
thesis/: bibliography.bib  main.tex
thesis/content/: 01_introduction.tex  02_background.tex  04_requirements.tex  05_concept_and_design.tex  06_implementation.tex  07_evaluation.tex
thesis/style/: style.tex
(+1045 files in other folders)
